--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -10,7 +10,7 @@
             {% for program in programs %}
             <div class="card" style="width: 18rem;">
                <a href="{{path('program_show', { 'id': program.id }) }}">
-                  <img class="card-img-top" src="{{program.poster}}" alt="{{program.title}} poster" style="height: 25rem;">
+                  <img class="card-img-top" src="{{ vich_uploader_asset(program) }}" alt="{{program.title}} poster" style="height: 25rem;">
                </a>
                <div class="card-body flex flex-column">
                  <h5 class="subtitle">{{program.title}}</h5>
