--- a/templates/program/episode_show.html.twig
+++ b/templates/program/episode_show.html.twig
@@ -7,7 +7,7 @@
 <div class="container mt-5">
     <div class="programDetails flex">
        <div class="poster">
-          <img class="posterImg align-self-start mr-3" src="{{program.poster}}" alt="{{ program.title }} poster">
+          <img class="posterImg align-self-start mr-3" src="{{ vich_uploader_asset(program) }}" alt="{{ program.title }} poster">
        </div>
        <div class="media-body">
           <h1 class="title mt-0">{{ episode.title }}</h1>
