categories index : icone par défaut si aucune icone  uploadée pour la catégorie

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -168,6 +168,11 @@ footer a:hover {
   color: $primary;
 }
 
+label.required:after {
+  content: "* ";
+  color: red;
+}
+
 /*upload forms*/
 .vich-image {
   display: flex;
