--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -10,7 +10,13 @@
       <div class="card categCard text-center mb-1">
          <div class="card-body">
             <a href="{{path('category_show', {'categoryName' : category.name}) }}">
+
+               {# display uploaded categ icon if exists, default icon otherwise#}
+               {% if category.iconName %}
                   <img src="{{ vich_uploader_asset(category) }}" alt="{{category.name}}_icon" class="categIcon"/>
+               {% else %}
+                  <img src="{{ asset('build/images/default_icon.png') }}" alt="{{category.name}}_icon" class="categIcon"/>
+               {% endif %}   
                   <h2 class="subtitle categCardSub ms-2">{{ category.name }}</h2></a>
             </a>
          </div>
