--- a/templates/category/_form.html.twig
+++ b/templates/category/_form.html.twig
@@ -1,4 +1,4 @@
-{{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
+{{ form_start(form) }}
 <div class="row flex justify-content-center mt-3">
     <div class="col-md-5">
         {{ form_widget(form, {'attr': {'class': 'typeLabel'}}) }}
