--- a/templates/program/_form.html.twig
+++ b/templates/program/_form.html.twig
@@ -1,4 +1,4 @@
-{{ form_start(form) }}
+{{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
         <div class="row flex justify-content-center mt-3">
             <div class="col-md-5">
                 {{ form_widget(form, {'attr': {'class': 'typeLabel'}}) }}
