--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -9,7 +9,12 @@
    {% for program in programs %}
    <div class="card" style="width: 18rem;">
       <a href="{{path('program_show', { 'id': program.id }) }}">
+          {# display uploaded program poster if exists, default poster otherwise#}
+         {% if program.poster %}
          <img class="card-img-top" src="{{ vich_uploader_asset(program) }}" alt="{{program.title}} poster" style="height: 25rem;">
+         {% else %}
+         <img src="{{ asset('build/images/default_poster.png') }}" alt="{{program.title}} poster" style="height: 25rem;"/>
+         {% endif %}
       </a>
       <div class="card-body flex flex-column">
         <h5 class="subtitle">{{program.title}}</h5>
