--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -11,14 +11,15 @@
       <a href="{{path('program_show', { 'id': program.id }) }}">
           {# display uploaded program poster if exists, default poster otherwise#}
          {% if program.poster %}
-         <img class="card-img-top" src="{{ vich_uploader_asset(program) }}" alt="{{program.title}} poster" style="height: 25rem;">
+         <img class="card-img-top" src="{{ vich_uploader_asset(program) }}" alt="{{program.title}} poster" style="width: 100%; height: 25rem">
          {% else %}
-         <img src="{{ asset('build/images/default_poster.png') }}" alt="{{program.title}} poster" style="height: 25rem;"/>
+         <img src="{{ asset('build/images/default_poster.png') }}" alt="{{program.title}} poster" style="width: 100%; height: 25rem"/>
          {% endif %}
       </a>
       <div class="card-body flex flex-column">
         <h5 class="subtitle">{{program.title}}</h5>
         <h6 class="card-subtitle mb-2 text-muted">Catégorie: {{program.category.name}}</h6>
+        <h6 class="card-subtitle mb-2 text-muted">1ère diffusion: {{program.year}}</h6>
         <p class="card-text">{{program.summary| u.truncate(200, '...')}}.</p>
         <div class="flex justify-content-end mt-auto">
          <a href="{{path('program_show', { 'id': program.id }) }}" class="btn btn-primary">Voir plus</a>
