--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -17,6 +17,7 @@
          <h1 class="title mt-0">{{ program.title }}</h1>
          <p class="justify">{{ program.summary }}</p>
          <p><span class="subtitle">Catégorie :</span> {{ program.category.name }}</p>
+         <p><span class="subtitle">1ère diffusion :</span> {{ program.year }}</p>
          <p><span class="subtitle">Saisons :</p>
          <div class="flex flex-row">
             {% for season in seasons %}
