--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -20,6 +20,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('episode_index') }}">Episodes</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('actor_index') }}">Acteurs</a>
+                </li>
                 
             </ul>
         </div>
