--- a/templates/actor/index.html.twig
+++ b/templates/actor/index.html.twig
@@ -1,39 +1,50 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Actor index{% endblock %}
+{% block title %}WS2-Acteurs{% endblock %}
 
 {% block body %}
-    <h1>Actor index</h1>
+<div class="container mt-5">
+    <h1 class="title mt-5">Liste des acteurs</h1>
 
     <table class="table">
         <thead>
-            <tr>
-                <th>Id</th>
-                <th>Firstname</th>
-                <th>LastName</th>
-                <th>BirthDate</th>
+            <tr class="tableTitles">
+                <th>Prénom</th>
+                <th>Nom</th>
+                <th>Date de naissance</th>
+                <th>Séries</th>
                 <th>actions</th>
             </tr>
         </thead>
         <tbody>
         {% for actor in actors %}
             <tr>
-                <td>{{ actor.id }}</td>
+            
                 <td>{{ actor.firstname }}</td>
                 <td>{{ actor.lastName }}</td>
-                <td>{{ actor.birthDate ? actor.birthDate|date('Y-m-d') : '' }}</td>
+                <td>{{ actor.birthDate ? actor.birthDate|date('d/m/Y') : '' }}</td>
                 <td>
-                    <a href="{{ path('actor_show', {'id': actor.id}) }}">show</a>
-                    <a href="{{ path('actor_edit', {'id': actor.id}) }}">edit</a>
+                    {% for program in actor.programs %}
+                    {{program.title}} | 
+                    {% endfor %}
+                </td>
+                <td>
+                    <a href="{{ path('actor_show', {'id': actor.id}) }}">voir</a>
+                    <a href="{{ path('actor_edit', {'id': actor.id}) }}">modifier</a>
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="5">no records found</td>
+                <td colspan="5">Aucun acteur trouvé</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-    <a href="{{ path('actor_new') }}">Create new</a>
+{#pagination#}
+{% include '_paging.html.twig' %}
+
+    <a href="{{ path('actor_new') }}" class="btn btn-primary mt-3">Nouvel Acteur</a>
+</div>
+
 {% endblock %}
