--- a/templates/actor/_delete_form.html.twig
+++ b/templates/actor/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('actor_delete', {'id': actor.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form class="mt-3 col-md-2" method="post" action="{{ path('actor_delete', {'id': actor.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ actor.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-danger col-md-12">Supprimer</button>
 </form>
