program link on actor show, actor link on program show

--- a/templates/actor/index.html.twig
+++ b/templates/actor/index.html.twig
@@ -23,7 +23,9 @@
                 <td>{{ actor.lastName }}</td>
                 <td>
                     {% for program in actor.programs %}
-                    {{program.title}} | 
+                        <a href="{{ path('program_show', {'id': program.id}) }}">
+                            {{program.title}}
+                        </a> |
                     {% endfor %}
                 </td>
                 <td>
