--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -18,6 +18,18 @@
          <p class="justify">{{ program.summary }}</p>
          <p><span class="subtitle">Catégorie :</span> {{ program.category.name }}</p>
          <p><span class="subtitle">1ère diffusion :</span> {{ program.year }}</p>
+         <p><span class="subtitle">Acteurs :
+            <ul class="list-group list-group-flush">
+               {% for actor in program.actors %}
+               <li class="list-group-item">
+                  <a href="{{ path('actor_show', {'id': actor.id}) }}">
+                     {{ actor.firstname }} {{actor.lastName}}</li>
+                  </a>
+               {% else %}
+                  <li>Aucun acteur pour cette série</li>
+               {% endfor %}
+             </ul>
+         
          <p><span class="subtitle">Saisons :</p>
          <div class="flex flex-row">
             {% for season in seasons %}
