--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -150,6 +150,14 @@ footer a:hover {
   background-color: rgba($main-color, 0.15)
 }
 
+/* bootstrap list */
+
+.list-group-item {
+  background-color: $card-background;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: 0.25rem;
+}
+
 /*forms*/
 
 .btn-primary {
